basic RX test working

--- a/rigel-a-rx/rigel-a-sw/platformio.ini
+++ b/rigel-a-rx/rigel-a-sw/platformio.ini
@@ -12,3 +12,9 @@
 platform = ststm32
 board = nucleo_wl55jc
 framework = arduino
+lib_deps = 
+    jgromes/RadioLib@^6.5.0
+    SPI
+    SubGHz
+    SrcWrapper
+board_build.mcu = stm32wle5c8
